# agent_with_memory

./: .gitignore  .replit  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  MCP_AGENT_EXAMPLE.py  PERFECT_AGENT_EXAMPLE.py  README.md  demo_memory_agent.py  docker-compose.yml  env.example  inspect_base_agent.py  memory_backup.jsonl  pyproject.toml  requirements.txt  test_brave_mcp_real.py  test_connect.py  test_mcp_integration.py  test_mcp_mock.py  test_mongo.py  test_openai.py  validate_mcp.py
archive/: TEMPORAL_EVALUATION.md
examples/: mongodb_langgraph_example.py
infrastructure/monitoring/: prometheus.yml
scripts/: setup_graph_indexes.py  setup_indexes.py  setup_schema_validation.py  setup_test_indexes.py
src/: __init__.py
src/api/: main.py  middleware.py  runtime.py  websocket.py
src/api/routes/: __init__.py  agents.py  chat.py  evaluation.py  health.py  hitl.py  memories.py  nl_query.py  time_travel.py
src/context/: __init__.py  engineer.py  summarizer.py
src/core/: agent.py  agent_builder.py  agent_langgraph.py  hitl.py
src/embeddings/: langchain_voyage.py  voyage_client.py
src/evaluation/: __init__.py  evaluator.py
src/ingestion/: mongodb_ingestion.py
src/memory/: base.py  cache.py  entity.py  episodic.py  graph.py  manager.py  procedural.py  semantic.py  summary.py  working.py
src/observability/: __init__.py  galileo_monitor.py  tracer.py
src/retrieval/: config.py  rrf.py  score_parser.py  tier_support.py  vector_search.py
src/retrieval/filters/: __init__.py  atlas_search_filters.py  lexical_prefilters.py  vector_search_filters.py
src/storage/: mongodb_client.py  vector_index.py
src/tools/: mcp_toolkit.py  nl_to_mql.py  summary_tools.py
tests/: __init__.py  test_phase3_phase4_fixes.py
tests/api/: test_time_travel.py
tests/context/: test_engineer.py  test_summarizer.py
tests/core/: test_hitl.py
tests/evaluation/: test_evaluation_api.py  test_evaluator.py
tests/integration/: __init__.py  conftest.py  test_context_compression.py  test_entity_extraction.py  test_full_memory_cycle.py  test_hybrid_search.py  test_multi_collection.py  test_multi_tenant_isolation.py  test_production_realistic.py  test_real_agent_stress.py  test_real_e2e_flow.py
tests/memory/: test_entity.py  test_graph_memory.py  test_isolation_bypass_fixes.py  test_isolation_bypass_fixes_v2.py  test_phase1_critical.py  test_phase2_high.py  test_summary.py
tests/observability/: test_agent_tracing.py  test_manager_tracing.py  test_tracer.py
tests/retrieval/: conftest.py  test_config.py  test_filters.py  test_lexical_prefilters.py  test_rrf.py  test_score_parser.py  test_tier_support.py  test_vector_search.py
tests/tools/: test_nl_query_api.py  test_nl_to_mql.py  test_summary_tools.py
website/: .replit  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
website/src/pages/: index.tsx
website/src/styles/: globals.css
